--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 showSuccessMessage('✅ Candidate login successful! Redirecting to exam dashboard...');
                 setTimeout(() => {
                     // Here you would redirect to candidate dashboard
-                    // window.location.href = 'candidate-dashboard.html';
+                    // window.location.href = 'candidate_dashboard.html';
                     alert('Redirecting to Candidate Exam Dashboard...');
                 }, 2000);
             } else {
@@ -320,7 +320,7 @@
                 showSuccessMessage('✅ Admin login successful! Redirecting to admin panel...');
                 setTimeout(() => {
                     // Here you would redirect to admin dashboard
-                    // window.location.href = 'admin-dashboard.html';
+                    // window.location.href = 'admin_dashboard.html';
                     alert('Redirecting to Admin Dashboard...');
                 }, 2000);
             } else {
