--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -5,333 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - Cheating Detection System</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
+        * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(135deg, #1e293b 0%, #334155 100%);
-            min-height: 100vh;
-            color: #e2e8f0;
+            min-height: 100vh; color: #e2e8f0;
         }
-
-        .header {
-            background: linear-gradient(45deg, #dc2626, #ef4444);
-            color: white;
-            padding: 1rem 0;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-        }
-
-        .header-content {
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 0 2rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .header h1 {
-            font-size: 1.5rem;
-            font-weight: 700;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .stats-bar {
-            display: flex;
-            gap: 2rem;
-            align-items: center;
-        }
-
-        .stat-item {
-            text-align: center;
-        }
-
-        .stat-number {
-            font-size: 1.5rem;
-            font-weight: 700;
-        }
-
-        .stat-label {
-            font-size: 0.8rem;
-            opacity: 0.9;
-        }
-
-        .logout-btn {
-            background: rgba(255,255,255,0.2);
-            border: 1px solid rgba(255,255,255,0.3);
-            color: white;
-            padding: 0.5rem 1rem;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .logout-btn:hover {
-            background: rgba(255,255,255,0.3);
-        }
-
-        .container {
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 2rem;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: auto auto;
-            gap: 2rem;
-        }
-
-        .card {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            padding: 2rem;
-            box-shadow: 0 8px 30px rgba(0,0,0,0.2);
-        }
-
-        .card h2 {
-            margin-bottom: 1.5rem;
-            color: #f1f5f9;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .alerts-section {
-            grid-column: span 2;
-        }
-
-        .alert-item {
-            background: rgba(239, 68, 68, 0.1);
-            border: 1px solid rgba(239, 68, 68, 0.3);
-            border-radius: 10px;
-            padding: 1rem;
-            margin-bottom: 1rem;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            transition: all 0.3s ease;
-            animation: alertPulse 2s infinite;
-        }
-
-        @keyframes alertPulse {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.8; }
-        }
-
-        .alert-high {
-            border-color: rgba(239, 68, 68, 0.5);
-            background: rgba(239, 68, 68, 0.2);
-        }
-
-        .alert-medium {
-            border-color: rgba(251, 191, 36, 0.5);
-            background: rgba(251, 191, 36, 0.1);
-        }
-
-        .alert-info {
-            border-color: rgba(59, 130, 246, 0.5);
-            background: rgba(59, 130, 246, 0.1);
-        }
-
-        .alert-content {
-            flex: 1;
-        }
-
-        .alert-title {
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-        }
-
-        .alert-details {
-            font-size: 0.9rem;
-            opacity: 0.9;
-        }
-
-        .alert-actions {
-            display: flex;
-            gap: 0.5rem;
-        }
-
-        .btn {
-            padding: 0.5rem 1rem;
-            border-radius: 8px;
-            border: none;
-            cursor: pointer;
-            font-weight: 500;
-            font-size: 0.8rem;
-            transition: all 0.3s ease;
-        }
-
-        .btn-danger {
-            background: #dc2626;
-            color: white;
-        }
-
-        .btn-warning {
-            background: #f59e0b;
-            color: white;
-        }
-
-        .btn-info {
-            background: #3b82f6;
-            color: white;
-        }
-
-        .btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-        }
-
-        .student-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1rem;
-            max-height: 400px;
-            overflow-y: auto;
-        }
-
-        .student-card {
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            padding: 1rem;
-            position: relative;
-        }
-
-        .student-suspicious {
-            border-color: rgba(239, 68, 68, 0.5);
-            box-shadow: 0 0 15px rgba(239, 68, 68, 0.3);
-        }
-
-        .student-name {
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-        }
-
-        .student-status {
-            font-size: 0.8rem;
-            padding: 0.25rem 0.5rem;
-            border-radius: 12px;
-            display: inline-block;
-            margin-bottom: 0.5rem;
-        }
-
-        .status-active {
-            background: rgba(34, 197, 94, 0.2);
-            color: #22c55e;
-        }
-
-        .status-suspicious {
-            background: rgba(239, 68, 68, 0.2);
-            color: #ef4444;
-        }
-
-        .status-flagged {
-            background: rgba(251, 191, 36, 0.2);
-            color: #fbbf24;
-        }
-
-        .student-metrics {
-            font-size: 0.8rem;
-            opacity: 0.8;
-        }
-
-        .metric-row {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 0.25rem;
-        }
-
-        .video-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-            max-height: 400px;
-            overflow-y: auto;
-        }
-
-        .video-feed {
-            background: #000;
-            border-radius: 8px;
-            aspect-ratio: 4/3;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .video-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(45deg, 
-                rgba(59, 130, 246, 0.1) 0%, 
-                rgba(147, 51, 234, 0.1) 100%);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            color: white;
-            text-align: center;
-        }
-
-        .video-status {
-            position: absolute;
-            top: 0.5rem;
-            right: 0.5rem;
-            padding: 0.25rem 0.5rem;
-            border-radius: 12px;
-            font-size: 0.7rem;
-            font-weight: 600;
-        }
-
-        .analytics-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 1rem;
-        }
-
-        .metric-card {
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            padding: 1rem;
-            text-align: center;
-        }
-
-        .metric-value {
-            font-size: 2rem;
-            font-weight: 700;
-            margin-bottom: 0.5rem;
-        }
-
-        .metric-label {
-            font-size: 0.8rem;
-            opacity: 0.8;
-        }
-
-        .danger-text { color: #ef4444; }
-        .warning-text { color: #fbbf24; }
-        .success-text { color: #22c55e; }
-        .info-text { color: #3b82f6; }
-
-        @media (max-width: 1024px) {
-            .container {
-                grid-template-columns: 1fr;
-                padding: 1rem;
-            }
-            
-            .stats-bar {
-                gap: 1rem;
-            }
-        }
+        .header { background: linear-gradient(45deg, #dc2626, #ef4444); color: white; padding: 1rem 0; box-shadow: 0 2px 10px rgba(0,0,0,0.3); }
+        .header-content { max-width: 1400px; margin: 0 auto; padding: 0 2rem; display: flex; justify-content: space-between; align-items: center; }
+        .header h1 { font-size: 1.5rem; font-weight: 700; display: flex; align-items: center; gap: 0.5rem; }
+        .stats-bar { display: flex; gap: 2rem; align-items: center; }
+        .stat-item { text-align: center; }
+        .stat-number { font-size: 1.5rem; font-weight: 700; }
+        .stat-label { font-size: 0.8rem; opacity: 0.9; }
+        .logout-btn { background: rgba(255,255,255,0.2); border: 1px solid rgba(255,255,255,0.3); color: white; padding: 0.5rem 1rem; border-radius: 8px; cursor: pointer; transition: all 0.3s ease; }
+        .logout-btn:hover { background: rgba(255,255,255,0.3); }
+        .container { max-width: 1400px; margin: 0 auto; padding: 2rem; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: auto auto; gap: 2rem; }
+        .card { background: rgba(255, 255, 255, 0.05); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 15px; padding: 2rem; box-shadow: 0 8px 30px rgba(0,0,0,0.2); }
+        .card h2 { margin-bottom: 1.5rem; color: #f1f5f9; display: flex; align-items: center; gap: 0.5rem; }
+        .alerts-section { grid-column: span 2; }
+        .alert-item { background: rgba(239, 68, 68, 0.1); border: 1px solid rgba(239, 68, 68, 0.3); border-radius: 10px; padding: 1rem; margin-bottom: 1rem; display: flex; align-items: center; justify-content: space-between; transition: all 0.3s ease; animation: alertPulse 2s infinite; }
+        @keyframes alertPulse { 0%, 100% { opacity: 1; } 50% { opacity: 0.8; } }
+        .alert-high { border-color: rgba(239, 68, 68, 0.5); background: rgba(239, 68, 68, 0.2); }
+        .alert-medium { border-color: rgba(251, 191, 36, 0.5); background: rgba(251, 191, 36, 0.1); }
+        .alert-info { border-color: rgba(59, 130, 246, 0.5); background: rgba(59, 130, 246, 0.1); }
+        .alert-content { flex: 1; }
+        .alert-title { font-weight: 600; margin-bottom: 0.5rem; }
+        .alert-details { font-size: 0.9rem; opacity: 0.9; }
+        .alert-actions { display: flex; gap: 0.5rem; }
+        .btn { padding: 0.5rem 1rem; border-radius: 8px; border: none; cursor: pointer; font-weight: 500; font-size: 0.8rem; transition: all 0.3s ease; }
+        .btn-danger { background: #dc2626; color: white; }
+        .btn-warning { background: #f59e0b; color: white; }
+        .btn-info { background: #3b82f6; color: white; }
+        .btn:hover { transform: translateY(-2px); box-shadow: 0 4px 12px rgba(0,0,0,0.3); }
+        .danger-text { color: #ef4444; } .warning-text { color: #fbbf24; } .success-text { color: #22c55e; } .info-text { color: #3b82f6; }
     </style>
 </head>
 <body>
@@ -390,4 +97,38 @@
                     </div>
                     <div class="alert-actions">
                         <button class="btn btn-danger" onclick="terminateExam('STU2024003')">Terminate Exam</button>
-                        <button class="btn btn-warning" onclick
+                        <button class="btn btn-warning" onclick="sendWarning('STU2024003')">Send Warning</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- JavaScript Functions -->
+    <script>
+        function logout() {
+            if (confirm("Are you sure you want to logout?")) {
+                window.location.href = "index.html"; // Redirect to login page
+            }
+        }
+
+        function terminateExam(studentId) {
+            alert(`Exam terminated for Student ID: ${studentId}`);
+            window.location.href = "admin_dashboard.html"; // refresh page
+        }
+
+        function sendWarning(studentId) {
+            alert(`Warning sent to Student ID: ${studentId}`);
+        }
+
+        function flagStudent(studentId) {
+            alert(`Student ID: ${studentId} has been flagged for further review`);
+        }
+
+        function reviewFootage(studentId) {
+            alert(`Reviewing footage for Student ID: ${studentId}`);
+            // window.location.href = "review_page.html?student=" + studentId; // optional redirect
+        }
+    </script>
+</body>
+</html>
